# src/server/v2.0/handler/robot.go
@@ -1,0 +1,16 @@
+package handler
+
+import (
+	"github.com/goharbor/harbor/src/pkg/robot"
+)
+
+func newRobotAPI() *robotAPI {
+	return &robotAPI{
+		robotCtl: robot.RobotCtr,
+	}
+}
+
+type robotAPI struct {
+	BaseAPI
+	robotCtl robot.Controller
+}
